Corrections that I've done with Mr.Alekiss, mainly on the 'How to do' some things as the glass panels and how to make it align things correctly

--- a/style.css
+++ b/style.css
@@ -1,50 +1,45 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background: url("assets/background.jpg") no-repeat;
     background-size: cover;
-    text-align: center;
-}
-
-div {
+    background-position: center;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 .mother {
     background: rgba(0, 0, 0, 0.25); /*Da "cor" ao glass panel criado*/
-    justify-content: center;
-    margin: 200px;
-    border: 2px transparent grey;
-    width: 750px; /*Controla o tamanho do conteúdo em si, que consequentemente muda a borda*/
-    margin-left: 550px;
-    padding: 10px 40px; /* Aumenta o tamanho da borda em altura e comprimento*/
-    color: white;
+    justify-content: space-around;
+    align-items: center;
+    height: 200px;
+    width: 550px; /*Controla o tamanho do conteúdo em si, que consequentemente muda a borda*/
     border-radius: 15px;
     backdrop-filter: blur(10px);
     display: flex;
-}
-
-.hours {
-    padding-right: 125px;
-    border: 2px transparent;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    background: rgba(0, 0, 0, 0.75);
-    padding: 175px 80px;
-    margin-right: 75px;
-}
-.minutes{
-    padding-right: 100px;
-    border: 2px transparent;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    background: rgba(0, 0, 0, 0.75);
-    padding: 175px 80px;
-    margin-right: 75px;
-}
-.seconds{
-    padding-right: 25px;
-    border: 2px transparent;
-    border-radius: 10px;
-    backdrop-filter: blur(10px);
-    background: rgba(0, 0, 0, 0.75);
-    padding: 175px 80px;
+    box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.7);
+    div {
+        color: white;
+        display: flex;
+        height: 140px;
+        width: 130px;
+        background: rgba(0, 0, 0, 0.5); /*Da "cor" ao glass panel criado*/
+        border-radius: 10px;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        letter-spacing: 3px;
+    }
+    bottom{
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .time{
+        font-size: 15px;
+    }
 }
